syntax = "proto3";

option csharp_namespace = "GrpcDevice";

import "google/protobuf/empty.proto";

service Device {
	// デバイス情報を取得
	rpc GetDeviceInfo (google.protobuf.Empty) returns (DeviceInfoResponse);
	rpc GetDeviceLog (DeviceSysLogRequest) returns (DeviceSysLogResponse);
}

message DeviceInfoResponse {
    // デバイス名
    string DeviceName = 1;
    // ユーザ名
    string UserName = 2;
}

message DeviceSysLogRequest {
	// レベル
	uint32 Level = 1;
}

message DeviceSysLogResponse {
	// Epochからの経過時間
	int64 Ticks = 1;
	// レベル
	uint32 Level = 2;
	// メッセージ
	string Message = 3;
}
